--- a/estilos.css
+++ b/estilos.css
@@ -1,62 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 *{
     margin: 0;
-    padding: 10;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Heebo', sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 a{
     text-decoration: none;
-    color: #000;
 }
 
 img{
     object-fit: cover;
-    object-position: top;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+}
+
+h2{
+    font-weight: 400;
 }
 
 nav{
-    padding: 20px 148px;
-    background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-weight: 600; 
-}
-
-nav .logo{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-nav .logo img{
-    height: 60px;
-    width: auto;
-    object-fit: contain;
-    
-}
-
-nav .logo a{
-    font-size: 15px;
-    color: #3e3e3e;
-    font-weight: bold;
+    gap: 32px;
+    border: 1px solid #e8e8e8;
+    position: absolute;
+    top: 16px;
+    left: 50px;
+    transform: translateX(-50%);
+    border-radius: 16px;
+    padding: 12px;
 }
 
 nav .nav-links{
     display: flex;
-    gap: 16px;
+    gap: 24px;
 }
 
-nav .nav-links a{
-    transition: color 0.3s ease;
-}
 
-nav .nav-links a:hover,
-nav .nav-links a.selected{
-    color: #d89313;
-}
 
